create submit event and render books

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       <button type="submit" class="add">Add Book</button>
     </form>
   </dialog>
-  <div class="result"></div>
+  <div class="result">
+  </div>
 
   <script src="main.js"></script>
 </body>
